--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Site navigation -->
     <header class="header">
-      <div class="container header-container">
-        <nav class="main-nav">
-          <a href="./index.html" class="logo">Web<span>Studio</span></a>
+      <div class="container header__container">
+        <nav class="header__nav">
+          <a href="./index.html" class="logo">Web<span class="logo__black">Studio</span></a>
           <ul class="site-nav">
             <li class="item"><a class="link" href="./index.html">Студія</a></li>
             <li class="item"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
@@ -218,7 +219,7 @@
     <footer class="footer">
       <div class="container wrapper">
         <div class="address-frapper">
-          <a class="logo-two" href="./index.html">Web<span>Studio</span></a>
+          <a class="logo" href="./index.html">Web<span class="logo__white">Studio</span></a>
           <address class="footer-address">
             <ul class="contacts">
               <!-- Adress -->
